[tool.poetry]
name = "wednesday-python-unit-test-prica277"
version = "0.1.0"
description = ""
authors = ["AlexPrice8 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
